fixing the vertical align

--- a/App/static/style.css
+++ b/App/static/style.css
@@ -5,8 +5,8 @@ body{
 h1{
     font-weight: bold;
     font-family: monospace;
-    margin-top: 35%;
     color: #d6d6d6;
+    margin-top: 17.5%;    
 }
 
 button{
